<resources>
    <string name="app_name">ShoeStore</string>

    <!-- Common -->
    <string name="add_a_shoe">add a shoe</string>

    <!-- Login -->
    <string name="email">email</string>
    <string name="password">password</string>
    <string name="new_login">new Login</string>
    <string name="login_with_existing_account">login with existing account</string>

    <!-- Welcome -->
    <string name="welcome_shoe_store_title">Welcome to Shoe Store</string>
    <string name="welcome_shoe_store_description">Here you can buy your favorite shoes</string>
    <string name="next">next</string>

    <!-- Instruction -->
    <string name="instruction_shoe_store_title">Instructions to Shoe Store</string>
    <string name="instruction_shoe_store_firs">By clicking the button below you can go to the shoe detail screen</string>
    <string name="instruction_shoe_store_second">Here you can choose the shoe detail</string>
    <string name="instruction_shoe_store_third">When finished, just add the shoe</string>

    <!-- Shoes List -->
    <string name="logout">Logout</string>
    <string name="shoe_list_shoe_name">Shoe Name: %1$s</string>
    <string name="shoe_list_company">Company: %1$s</string>
    <string name="shoe_list_shoe_size">Shoe Size: %1$s</string>
    <string name="shoe_list_description">Description: %1$s</string>

    <!-- Shoe Details -->
    <string name="shoe_details_title">shoe details</string>
    <string name="shoe_details_shoe_name">shoe name</string>
    <string name="shoe_details_shoe_company">company</string>
    <string name="shoe_details_shoe_size">shoe size</string>
    <string name="shoe_details_shoe_description">description</string>
    <string name="shoe_details_save">save</string>
    <string name="shoe_details_cancel">cancel</string>
</resources>

